RESOLVED FIXED188282
Control center controls disappear when pausing, locking device.
https://bugs.webkit.org/show_bug.cgi?id=188282
Summary Control center controls disappear when pausing, locking device.
Jer Noble
Reported 2018-08-02 15:48:07 PDT
Control center controls disappear when pausing, locking device.
Attachments
Patch for landing (20.14 KB, patch)
2018-08-02 15:55 PDT, Jer Noble
no flags
Patch for landing (21.88 KB, patch)
2018-08-02 16:18 PDT, Jer Noble
no flags
Patch for landing (22.56 KB, patch)
2018-08-02 16:40 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2018-08-02 15:48:36 PDT
Radar WebKit Bug Importer
Comment 2 2018-08-02 15:49:01 PDT
Jer Noble
Comment 3 2018-08-02 15:55:45 PDT
Jer Noble
Comment 4 2018-08-02 15:55:52 PDT
Created attachment 346425 [details] Patch for landing
Jer Noble
Comment 5 2018-08-02 15:57:23 PDT
Jer Noble
Comment 6 2018-08-02 16:18:27 PDT
Created attachment 346426 [details] Patch for landing
Jer Noble
Comment 7 2018-08-02 16:40:13 PDT
Created attachment 346430 [details] Patch for landing
WebKit Commit Bot
Comment 8 2018-08-02 18:54:22 PDT
Comment on attachment 346430 [details] Patch for landing Clearing flags on attachment: 346430 Committed r234534: <https://trac.webkit.org/changeset/234534>
WebKit Commit Bot
Comment 9 2018-08-02 18:54:23 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 10 2018-08-03 08:00:26 PDT
Comment on attachment 346430 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=346430&action=review > Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.mm:147 > - : PlatformMediaSessionManager() > + : MediaSessionManagerCocoa() Normally it’s not necessary to explicitly initialize a base class if there are no arguments. Is there some reason it’s necessary here? Would be nice to leave this out if it’s optional. > Source/WebCore/platform/audio/mac/MediaSessionManagerMac.mm:58 > - : PlatformMediaSessionManager() > + : MediaSessionManagerCocoa() Ditto.
Truitt Savell
Comment 11 2018-08-03 10:20:58 PDT
It looks like the new layout test from https://trac.webkit.org/changeset/234534/webkit has flakey timeouts on Sierra Release Test history: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=platform%2Fmac%2Fmedia%2Faudio-session-category-video-paused.html Diff: --- /Volumes/Data/slave/highsierra-release-tests-wk2/build/layout-test-results/platform/mac/media/audio-session-category-video-paused-expected.txt +++ /Volumes/Data/slave/highsierra-release-tests-wk2/build/layout-test-results/platform/mac/media/audio-session-category-video-paused-actual.txt @@ -1,19 +1,5 @@ +#PID UNRESPONSIVE - com.apple.WebKit.WebContent.Development (pid 8882) +FAIL: Timed out waiting for notifyDone to be called -RUN(internals.settings.setShouldManageAudioSessionCategory(true)) -RUN(video.src = findMediaFile("video", "../../../media/content/test")) -RUN(video.play()) -EVENT(playing) -EXPECTED (internals.audioSessionCategory() == 'MediaPlayback') OK -RUN(video.pause()) -EVENT(pause) -EXPECTED (internals.audioSessionCategory() == 'MediaPlayback') OK -RUN(internals.beginMediaSessionInterruption("system")) -EXPECTED (internals.audioSessionCategory() == 'None') OK -RUN(video.play()) -EVENT(playing) -EXPECTED (internals.audioSessionCategory() == 'MediaPlayback') OK -RUN(video.src = "") -RUN(video.load()) -EXPECTED (internals.audioSessionCategory() == 'None') OK -END OF TEST - +#EOF +#EOF
Dawei Fenton (:realdawei)
Comment 12 2018-08-03 10:27:24 PDT
(In reply to WebKit Commit Bot from comment #8) > Comment on attachment 346430 [details] > Patch for landing > > Clearing flags on attachment: 346430 > > Committed r234534: <https://trac.webkit.org/changeset/234534> Also seeing API test failure on iOS after this revision: https://build.webkit.org/builders/Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/6587/steps/run-api-tests/logs/stdio TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS 2018-08-02 21:23:51.737 TestWebKitAPI[75994:322566199] *** Warning: <AVPlayerViewController: 0x7fd3ad80b000> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7fd3ad80b000) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7fd3ad80b000) exitFullScreenAnimated:completionHandler:]! 2018-08-02 21:23:51.855 TestWebKitAPI[75994:322566199] *** Warning: <AVPlayerViewController: 0x7fd3ae013800> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7fd3ae013800) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7fd3ae013800) exitFullScreenAnimated:completionHandler:]! 2018-08-02 21:23:51.970 TestWebKitAPI[75994:322566199] *** Warning: <AVPlayerViewController: 0x7fd3b0006a00> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7fd3b0006a00) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7fd3b0006a00) exitFullScreenAnimated:completionHandler:]! >>>> frameSizeChanged = 4096 >>>> frameSizeChanged = 4096 2018-08-02 21:23:52.167 TestWebKitAPI[75994:322566199] *** Warning: <AVPlayerViewController: 0x7fd3ad84f000> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7fd3ad84f000) exitFullScreenAnimated:completionHandler:]! -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] failed with error View needs to be loaded before you can call -[AVPlayerViewController (0x7fd3ad84f000) exitFullScreenAnimated:completionHandler:]! 2018-08-02 21:23:52.303 TestWebKitAPI[75994:322566199] *** Warning: <AVPlayerViewController: 0x7fd3b0007000> is trying to enter full screen, but is not in its view's window's view controller hierarchy. This results in undefined behavior. /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/WebKitLegacy/ios/AudioSessionCategoryIOS.mm:126 Value of: [[getAVAudioSessionClass() sharedInstance] category] Actual: "AVAudioSessionCategoryPlayback" Expected: getAVAudioSessionCategoryAmbient() Which is: "AVAudioSessionCategoryAmbient"
Jer Noble
Comment 13 2018-08-03 11:14:11 PDT
Dawei Fenton (:realdawei)
Comment 14 2018-08-06 15:43:27 PDT
API test appears to be fixed, but still seeing frequent timeouts: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=platform%2Fmac%2Fmedia%2Faudio-session-category-video-paused.html Sample Diff: --- /Volumes/Data/slave/highsierra-release-tests-wk2/build/layout-test-results/platform/mac/media/audio-session-category-video-paused-expected.txt +++ /Volumes/Data/slave/highsierra-release-tests-wk2/build/layout-test-results/platform/mac/media/audio-session-category-video-paused-actual.txt @@ -1,19 +1,5 @@ +#PID UNRESPONSIVE - com.apple.WebKit.WebContent.Development (pid 69042) +FAIL: Timed out waiting for notifyDone to be called -RUN(internals.settings.setShouldManageAudioSessionCategory(true)) -RUN(video.src = findMediaFile("video", "../../../media/content/test")) -RUN(video.play()) -EVENT(playing) -EXPECTED (internals.audioSessionCategory() == 'MediaPlayback') OK -RUN(video.pause()) -EVENT(pause) -EXPECTED (internals.audioSessionCategory() == 'MediaPlayback') OK -RUN(internals.beginMediaSessionInterruption("system")) -EXPECTED (internals.audioSessionCategory() == 'None') OK -RUN(video.play()) -EVENT(playing) -EXPECTED (internals.audioSessionCategory() == 'MediaPlayback') OK -RUN(video.src = "") -RUN(video.load()) -EXPECTED (internals.audioSessionCategory() == 'None') OK -END OF TEST - +#EOF +#EOF
Jer Noble
Comment 15 2018-08-07 15:28:04 PDT
We may have to covert this test from a LayoutTest (where previous and subsequent tests can mess with state of global objects) to an API test (where we can fully control the lifetime of the test).
Dawei Fenton (:realdawei)
Comment 16 2018-08-08 11:27:39 PDT
(In reply to Jer Noble from comment #15) > We may have to covert this test from a LayoutTest (where previous and > subsequent tests can mess with state of global objects) to an API test > (where we can fully control the lifetime of the test). Okay should we skip in the interim to reduce the noise on the bots?
Ryan Haddad
Comment 17 2018-08-29 15:58:39 PDT
(In reply to David Fenton (:realdawei) from comment #16) > (In reply to Jer Noble from comment #15) > > We may have to covert this test from a LayoutTest (where previous and > > subsequent tests can mess with state of global objects) to an API test > > (where we can fully control the lifetime of the test). > > Okay should we skip in the interim to reduce the noise on the bots? This is still frequently timing out on the bots. What is the plan here?
Truitt Savell
Comment 18 2018-08-30 10:27:41 PDT
(In reply to David Fenton (:realdawei) from comment #12) > (In reply to WebKit Commit Bot from comment #8) > > Comment on attachment 346430 [details] > > Patch for landing > > > > Clearing flags on attachment: 346430 > > > > Committed r234534: <https://trac.webkit.org/changeset/234534> > > > Also seeing API test failure on iOS after this revision: > > https://build.webkit.org/builders/ > Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/6587/steps/ > run-api-tests/logs/stdio > > TestWebKitAPI.WebKitLegacy.AudioSessionCategoryIOS > 2018-08-02 21:23:51.737 TestWebKitAPI[75994:322566199] *** Warning: > <AVPlayerViewController: 0x7fd3ad80b000> is trying to enter full screen, but > is not in its view's window's view controller hierarchy. This results in > undefined behavior. > -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] > failed with error View needs to be loaded before you can call > -[AVPlayerViewController (0x7fd3ad80b000) > exitFullScreenAnimated:completionHandler:]! > -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] > failed with error View needs to be loaded before you can call > -[AVPlayerViewController (0x7fd3ad80b000) > exitFullScreenAnimated:completionHandler:]! > 2018-08-02 21:23:51.855 TestWebKitAPI[75994:322566199] *** Warning: > <AVPlayerViewController: 0x7fd3ae013800> is trying to enter full screen, but > is not in its view's window's view controller hierarchy. This results in > undefined behavior. > -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] > failed with error View needs to be loaded before you can call > -[AVPlayerViewController (0x7fd3ae013800) > exitFullScreenAnimated:completionHandler:]! > -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] > failed with error View needs to be loaded before you can call > -[AVPlayerViewController (0x7fd3ae013800) > exitFullScreenAnimated:completionHandler:]! > 2018-08-02 21:23:51.970 TestWebKitAPI[75994:322566199] *** Warning: > <AVPlayerViewController: 0x7fd3b0006a00> is trying to enter full screen, but > is not in its view's window's view controller hierarchy. This results in > undefined behavior. > -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] > failed with error View needs to be loaded before you can call > -[AVPlayerViewController (0x7fd3b0006a00) > exitFullScreenAnimated:completionHandler:]! > -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] > failed with error View needs to be loaded before you can call > -[AVPlayerViewController (0x7fd3b0006a00) > exitFullScreenAnimated:completionHandler:]! > >>>> frameSizeChanged = 4096 > >>>> frameSizeChanged = 4096 > 2018-08-02 21:23:52.167 TestWebKitAPI[75994:322566199] *** Warning: > <AVPlayerViewController: 0x7fd3ad84f000> is trying to enter full screen, but > is not in its view's window's view controller hierarchy. This results in > undefined behavior. > -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] > failed with error View needs to be loaded before you can call > -[AVPlayerViewController (0x7fd3ad84f000) > exitFullScreenAnimated:completionHandler:]! > -[AVPlayerViewController exitFullScreenAnimated:completionHandler:] > failed with error View needs to be loaded before you can call > -[AVPlayerViewController (0x7fd3ad84f000) > exitFullScreenAnimated:completionHandler:]! > 2018-08-02 21:23:52.303 TestWebKitAPI[75994:322566199] *** Warning: > <AVPlayerViewController: 0x7fd3b0007000> is trying to enter full screen, but > is not in its view's window's view controller hierarchy. This results in > undefined behavior. > > > /Volumes/Data/slave/ios-simulator-11-release/build/Tools/TestWebKitAPI/Tests/ > WebKitLegacy/ios/AudioSessionCategoryIOS.mm:126 > Value of: [[getAVAudioSessionClass() sharedInstance] category] > Actual: "AVAudioSessionCategoryPlayback" > Expected: getAVAudioSessionCategoryAmbient() > Which is: "AVAudioSessionCategoryAmbient" I saw this API failure again: https://build.webkit.org/builders/Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/7126/steps/run-api-tests/logs/stdio From: https://build.webkit.org/builders/Apple%20iOS%2011%20Simulator%20Debug%20WK2%20(Tests)/builds/6187
Jer Noble
Comment 19 2018-08-30 10:32:01 PDT
(In reply to Truitt Savell from comment #18) > I saw this API failure again: > https://build.webkit.org/builders/ > Apple%20iOS%2011%20Simulator%20Release%20WK2%20%28Tests%29/builds/7126/steps/ > run-api-tests/logs/stdio > > From: > https://build.webkit.org/builders/ > Apple%20iOS%2011%20Simulator%20Debug%20WK2%20(Tests)/builds/6187 This looks like a crash, not a failure. Could you please attach the crash log to a new bug, and relate it to this one?
Truitt Savell
Comment 20 2018-08-30 10:53:52 PDT
Note You need to log in before you can comment on or make changes to this bug.